fix to navbar alignment

--- a/react-portfolio/src/styles/Header.css
+++ b/react-portfolio/src/styles/Header.css
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   #title {
@@ -45,8 +46,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
 }
-
-
