--- a/react-portfolio/src/styles/Navigation.css
+++ b/react-portfolio/src/styles/Navigation.css
@@ -15,6 +15,18 @@ nav li {
 
 @media (max-width: 991.98px) {
   .navbar-nav .nav-item {
-    border-right: none; /* Remove right border on smaller screens */
+    border-right: none; 
   }
+}
+
+@media (max-width: 400px) {
+  .navbar-nav {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    height: 100%; 
+    margin: 0 auto; 
+    overflow-y: hidden; 
+    width: 100%; 
+  }  
 }
